Prevent content shifting with ddloader

--- a/ui/round/css/_icon.scss
+++ b/ui/round/css/_icon.scss
@@ -15,6 +15,22 @@
     &.pause-yes {
       font-size: 1.2em;
     }
+
+    &.hidden {
+      padding-right: 0;
+      padding-left: 0;
+      pointer-events: none;
+      visibility: hidden;
+    }
+  }
+
+  .icon-loader {
+    display: flex;
+    align-items: center;
+
+    .ddloader {
+      margin: 0;
+    }
   }
 
   &.confirm > button {
